# auto_diff

./: .gitignore  CMakeLists.txt  main.cpp  main2.cpp
include/kyadet/fwd/: bin_op.hpp  op_list.hpp
include/kyadet/fwd/bin_op/: div.hpp  mul.hpp  pow.hpp
include/kyadet/fwd/mono_op/: cos.hpp  exp.hpp  log.hpp
kyadet/: fwd.hpp
kyadet/fwd/: constant.hpp  expr_mgr.hpp  mono_op.hpp  op_list.hpp  to_string.hpp  var.hpp
kyadet/fwd/bin_op/: add.hpp  sub.hpp
kyadet/fwd/mono_op/: exp.hpp  sin.hpp
test/: CMakeLists.txt  test.cpp
